--- a/scene.yaml
+++ b/scene.yaml
@@ -12,12 +12,12 @@ global:
     order: function () { return feature.sort_key; }
 
 sources:
-    mapzen: #xyz-osm
-        type: MVT
-        url: https://xyz.api.here.com/tiles/osmbase/512/all/{z}/{x}/{y}.mvt
-        url_params:
-            access_token: global.access_token
-        max_zoom: 2
+#     mapzen: #xyz-osm
+#         type: MVT
+#         url: https://xyz.api.here.com/tiles/osmbase/512/all/{z}/{x}/{y}.mvt
+#         url_params:
+#             access_token: global.access_token
+#         max_zoom: 2
     _xyzspace:
         # url: https://xyz.api.here.com/hub/spaces/MxDUEBlV/tile/web/{z}_{x}_{y}
 
