--- a/scene.yaml
+++ b/scene.yaml
@@ -1,4 +1,6 @@
-# Author @patriciogv - 2015
+# via @patriciogv, @meetar - 2015
+# @burritojustice - 2019
+
 
 import:
     - https://tangrams.github.io/blocks/functions/aastep.yaml
